--- a/Ofrenda.html
+++ b/Ofrenda.html
@@ -21,7 +21,7 @@
             height: 800px;
         }
         td {
-            border: 1px solid #ccc;
+            border: 1px solid #d67322;
             padding: 0;
             box-sizing: border-box;
         }
