--- a/Ofrenda.html
+++ b/Ofrenda.html
@@ -5,6 +5,7 @@
     <title>Pil</title>
     <style>
         body {
+            background-color: rgb(178, 115, 236);
             font-family: sans-serif;
             padding: 100px;
         }
@@ -21,7 +22,7 @@
             height: 800px;
         }
         td {
-            border: 1px solid #d67322;
+            border: 1px solid #09000000;
             padding: 0;
             box-sizing: border-box;
         }
